sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but ';' found.
    	if (plusPetit(i; i+1) == false) {echange(i, i+1), testFini = 1}
                       ^AlgBubbleSort1:8: error: ';' expected but ')' found.
    	if (plusPetit(i; i+1) == false) {echange(i, i+1), testFini = 1}
                            ^