sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var testFini = 0
  while (testFini == 1) {
    
  	for (i <- 0 to getNombreValeurs()-2) {
    	if (plusPetit(i; i+1) == false) {echange(i, i+1), testFini = 1}
  	}
    
  }
  
}